# reddit-daily

344baum-sweet/: 344baum-sweet.cabal  README.md  report.html
344baum-sweet/app/: Main.hs
344baum-sweet/bench/: BenchMain.hs
344baum-sweet/src/: BaumSweet.hs  Main.hs
