name:                344baum-sweet
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/matthewleon/344baum-sweet#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Leon
maintainer:          ml@matthewleon.com
copyright:           2017 Matthew Leon
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable 344baum-sweet
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , vector
