name:                344baum-sweet
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/matthewleon/344baum-sweet#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Leon
maintainer:          ml@matthewleon.com
copyright:           2017 Matthew Leon
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     BaumSweet
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  build-depends:       base >= 4.7 && < 5
                     , vector

executable baumsweet
  hs-source-dirs:      app
  build-depends:       base >= 4.7 && < 5
                     , 344baum-sweet
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

benchmark benchmark-baumsweet
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        BenchMain.hs
  ghc-options:         -Wall -O2
  -- other-modules:
  build-depends:  base
                , 344baum-sweet
                , criterion
